--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="signup">Signup</string>
+    <string name="send">Send</string>
+    <string name="message_hint">Say something</string>
+    <string name="profilePic">User Profile Picture</string>
 </resources>
